--- a/style.css
+++ b/style.css
@@ -2271,7 +2271,7 @@ a {
 }
 
 .second-image {
-  background-image: url("./images/Foto%202.webp");
+  background-image: url("./images/foto-202.webp");
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: 100vw;
@@ -2279,7 +2279,7 @@ a {
 }
 
 .third-image {
-  background-image: url("./images/foto%203.webp");
+  background-image: url("./images/foto-203.webp");
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: 100vw;
