--- a/style.css
+++ b/style.css
@@ -246,7 +246,6 @@ html.w-mod-touch * {
 .w-inline-block {
   max-width: 100%;
   display: inline-block;
-  height: 35px;
 }
 
 .w-clearfix:before, .w-clearfix:after {
@@ -2101,6 +2100,13 @@ textarea.w-input, textarea.w-select {
   }
 }
 
+body {
+  color: #333;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+}
+
 h1 {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -2123,11 +2129,10 @@ a {
 }
 
 .section {
+  z-index: -2;
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  overflow: hidden;
 }
 
 .section.divider {
@@ -2146,41 +2151,23 @@ a {
 .section.about {
   z-index: 1;
   background-color: var(--greenblue);
-  height: 100%;
-  margin-top: -500px;
-  padding-bottom: 150px;
   display: flex;
-  position: relative;
-}
-
-.section.second-image {
-  z-index: -1;
-  height: 100%;
-  position: relative;
 }
 
 .section.contact {
   z-index: 1;
   background-color: var(--lightblue);
   height: 100%;
-  margin-top: -600px;
-  position: relative;
-}
-
-.section.third {
-  height: 125vh;
 }
 
 .section.socials {
   z-index: 1;
   background-color: var(--pink);
-  height: 100%;
-  margin-top: 0;
-  position: relative;
+  height: auto;
 }
 
 .div-inside {
-  background-image: url("./images/Websiteheader.jpg");
+  background-image: url("https://cdn.prod.website-files.com/66d75722586d170d079ab71e/66d75b5b8a98c644ac0c5ebd_Websiteheader.jpg");
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -2199,26 +2186,22 @@ a {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  max-width: none;
-  height: 100%;
-  margin: auto 200px;
-  display: flex;
+  max-width: 1500px;
 }
 
 .container.contact {
   justify-content: flex-start;
   align-items: center;
-  margin-top: auto;
-  margin-left: 600px;
-  margin-right: 600px;
-  padding-top: 60px;
-  padding-bottom: 0;
-  position: relative;
+  max-width: 750px;
+  padding-top: 40px;
+  padding-bottom: 30px;
 }
 
 .container.socials {
-  margin-top: 60px;
-  margin-bottom: 25px;
+  margin-bottom: 0;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  display: flex;
 }
 
 .h1 {
@@ -2231,7 +2214,7 @@ a {
 
 .h1.green {
   color: var(--dark-greenblue);
-  margin-top: 100px;
+  margin-top: 64px;
   margin-bottom: 40px;
   font-size: 35px;
 }
@@ -2266,26 +2249,17 @@ a {
   background-image: url("./images/Websiteheader.webp");
   background-position: 50% 0;
   background-repeat: no-repeat;
-  background-size: 100vw;
-  background-attachment: fixed;
-  height: 100vw;
-}
-
-.second-image {
-  background-image: url("./images/foto-202.webp");
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  background-size: 100vw;
+  background-size: cover;
   height: 100vh;
 }
 
-.third-image {
-  background-image: url("./images/foto-203.webp");
-  background-position: 0 0;
+.second-image {
+  background-image: url("./images/Foto%202.webp");
+  background-position: 50% 0;
   background-repeat: no-repeat;
-  background-size: 100vw;
-  width: 100vw;
-  height: 150vh;
+  background-size: cover;
+  background-attachment: scroll;
+  height: 100vh;
 }
 
 .info-div {
@@ -2362,6 +2336,7 @@ a {
 .quick-stack {
   grid-column-gap: 10px;
   grid-row-gap: 10px;
+  max-width: 300px;
   height: 100%;
   margin-top: 20px;
   margin-bottom: 60px;
@@ -2380,6 +2355,44 @@ a {
   padding-top: 40px;
 }
 
+.top-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.top-trigger {
+  pointer-events: none;
+  height: 100vh;
+  position: absolute;
+  inset: 0% 0% auto;
+}
+
+.scroll-wrap {
+  height: 80vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.scroll-target {
+  height: 75vh;
+}
+
+.scroll-trigger {
+  pointer-events: none;
+  height: 100%;
+  position: absolute;
+  inset: auto 0% 0%;
+}
+
+.third-image {
+  background-image: url("./images/foto%203.webp");
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+  height: 100vh;
+}
+
 @media screen and (max-width: 991px) {
   .section {
     height: 100vh;
@@ -2387,10 +2400,6 @@ a {
 
   .section.about {
     padding-bottom: 100px;
-  }
-
-  .section.second-image {
-    background-image: none;
   }
 
   .div-inside {
@@ -2426,19 +2435,11 @@ a {
   }
 
   .first-image {
-    background-position: 57% 0;
-    background-size: cover;
-    width: auto;
-    height: 100%;
+    background-position: 55% 0;
   }
 
   .second-image {
-    background-position: 40% 0;
-    background-size: cover;
-  }
-
-  .third-image {
-    background-position: 50% 0;
+    background-position: 38% 0;
     background-size: cover;
   }
 
@@ -2464,34 +2465,101 @@ a {
   .rich-text-block {
     text-align: center;
   }
+
+  .third-image {
+    background-position: 49% 0;
+    background-size: cover;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .div-inside, .div-outside {
     height: 400px;
   }
+
+  .first-image {
+    height: 75vh;
+  }
 }
 
 @media screen and (max-width: 479px) {
   .section {
     z-index: -2;
+    min-height: 100px;
     position: relative;
   }
 
   .section.divider.pink {
-    margin-top: -494px;
+    height: auto;
+    min-height: auto;
+    margin-top: -360px;
+    padding-bottom: 0;
     position: relative;
   }
 
+  .section.about {
+    z-index: auto;
+    height: auto;
+    min-height: auto;
+    padding-bottom: 0;
+  }
+
   .container {
-    margin-top: 23px;
+    padding-bottom: 50px;
+  }
+
+  .container.socials {
+    margin-top: 0;
+  }
+
+  .container.topbanner {
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+
+  .h1 {
+    font-size: 30px;
+    line-height: 36px;
+  }
+
+  .h1.green {
+    font-size: 34px;
+    line-height: 35px;
+  }
+
+  .h1.red {
+    font-size: 23px;
+  }
+
+  .h2 {
+    font-size: 21px;
+    line-height: 30px;
   }
 
   .first-image {
-    background-size: 930px;
+    background-position: 55% -27%;
+    height: 65vh;
   }
 
   .second-image {
+    background-position: 42% 0;
+    margin-top: -45px;
+  }
+
+  .paragraph.copyrights {
+    font-size: 12px;
+  }
+
+  .rich-text-block {
+    text-align: left;
+    padding-top: 0;
+  }
+
+  .top-wrap, .scroll-wrap.tweede {
+    z-index: -1;
+  }
+
+  .third-image {
     margin-top: -45px;
   }
 }
